- FIX: PlayOnLinux bug: #26, function POL_LoadVar_ProgramFiles didn't remove line char.
- UPDATE: Using convertVersionToInt to see if new version of POL is available, so the developement version does not say that a newer is available.
- UPDATE: Change all echo to $POL_SW_id by a cat / EOF. In other word write write all text message in one pass instead of line by line.
- UPDATE: Capture to 2.1.3.
- ADD: Missing string in tranlation. String used by plugins.
- ADD: Set_WineWindowTitle. See POL bug: #23.
- ADD: New function for convert the string version to integer.
- ADD: playonlinux-cmd support search.
- ADD: playonlinux-cmd can list installed software.
- ADD: playonlinux-cmd can remove an already installed application.
- Full rebuild of translation template using xgettext. Python and Shell.
- Better use of the gettext function and string corrections for:
	-> python/wine_versions.py
	-> python/guiv3.py
	-> python/telecharger.py
	-> python/options.py
	-> python/mainwindow.py
	-> python/message_one.py
	-> bash/LiveInstall
	-> bash/autorun
	-> bash/daemon/autorun
	-> bash/uninstall
	-> bash/expert/Executer
	-> bash/expert/kill_wineserver
	-> bash/install_wver
	-> bash/killall
	-> bash/polconfigurator (always used?)
	-> bash/system_info
	-> bash/check_maj
	-> bash/check_maj_
	-> lib/applications
	-> lib/check_depend
	-> lib/interface_v3
	-> lib/main
	-> lib/wine
	-> lib/interface (+ cleaning)
	-> playonlinux-cmd
	-> playonlinux-pkg
	-> Plugins: Capture
- Removing some unused files plus cleaning some files. 
- Update copyright header. 

-> 3.8.1
- UPDATE: Capture to 2.1.1.
- UPDATE: Translation update with launchpad on 2010-08-31 and 2010-09-02.
- UPDATE/FIX: function install_plugin rewrited to a more sure system.
- FIX: function POL_SW_auto_shortcut doesn't work properly with icons.
- FIX: bug #31.
- FIX: bug #30. Adding a sleep 0.2 for some functions.
- NEW: include template for translation.
- NEW: add playonlinux-cmd for manage POL by command line.